--- a/modal.css
+++ b/modal.css
@@ -40,6 +40,7 @@ img {
 .main-navbar {
   float: right;
 }
+
 .topnav a {
   float: left;
   display: block;
@@ -66,6 +67,12 @@ img {
 
 .topnav .icon {
   display: none;
+}
+
+@media screen and (max-width: 960px) {
+  .hero-content h1 {
+    font-size: 70px;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -164,7 +171,7 @@ main {
   position: fixed;
   z-index: 1;
   left: 0;
-  top: 55px; /* Space between nav and modal, from 0 */
+  top: 0;
   height: 100%;
   width: 100%;
   overflow: auto;
@@ -521,8 +528,7 @@ footer {
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 0px; /* reduced from 20px */
-    min-width: auto; /* adapt to screen size */
+    padding: 20px; /* reduced from 20px */
   }
 
   .hero-content::after {
